# esp32-turntable-analog-streamer

./: .env.example  .gitignore  CMakeLists.txt  PCM1808_reference.md  README.md  idf_component.yml  main-idf.cpp  main.cpp.bak2.cpp  partitions.csv  platformio.ini  sdkconfig.defaults  sdkconfig.esp-wrover-kit  sdkconfig.esp32-s3-n16r8
.github/agents/: copilot-instructions.md
.specify/memory/: constitution.md
.specify/templates/: plan-template.md  spec-template.md  tasks-template.md
circuit-layout/: amp-stage.vrt  layout.vrt  volume-control.vrt
examples/: main-idf.cpp
extras/: stream-sonos.py
main/: CMakeLists.txt  config_schema.h  idf_component.yml  main.cpp
main/audio/: audio_buffer.cpp  audio_buffer.h  audio_capture.cpp  audio_capture.h  eq_processor.cpp  eq_processor.h  i2s_master.cpp  i2s_master.h  pcm1808_driver.cpp  pcm1808_driver.h
main/network/: config_portal.cpp  config_portal.h  config_portal_html.h  http_server.cpp  http_server.h  mqtt_client.cpp  mqtt_client.h  mqtt_service.h  stream_handler.cpp  stream_handler.h  wifi_manager.cpp  wifi_manager.h
main/storage/: nvs_config.cpp  nvs_config.h
main/system/: error_handler.cpp  error_handler.h  rgb_led.cpp  rgb_led.h  task_manager.cpp  task_manager.h  watchdog.cpp  watchdog.h
specs/001-pcm1808-http-streaming/: BUGFIX-async-handlers.md  data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-ha-mqtt-integration/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/003-esp-dsp-equalization/: data-model.md  (+4 more)
src/: config.h.example  main.cpp
(+7 files in other folders)
